# serializer version: 1
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'siren',
    'entity_category': None,
    'entity_id': 'siren.indoor_siren_6_play_tone_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Play Tone (2)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Play Tone (2)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <SirenEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.2-121-2-toneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Indoor Siren 6 Play Tone (2)',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <SirenEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'siren.indoor_siren_6_play_tone_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'siren',
    'entity_category': None,
    'entity_id': 'siren.indoor_siren_6_play_tone_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Play Tone (3)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Play Tone (3)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <SirenEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.2-121-3-toneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Indoor Siren 6 Play Tone (3)',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <SirenEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'siren.indoor_siren_6_play_tone_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'siren',
    'entity_category': None,
    'entity_id': 'siren.indoor_siren_6_play_tone_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Play Tone (4)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Play Tone (4)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <SirenEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.2-121-4-toneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Indoor Siren 6 Play Tone (4)',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <SirenEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'siren.indoor_siren_6_play_tone_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'siren',
    'entity_category': None,
    'entity_id': 'siren.indoor_siren_6_play_tone_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Play Tone (5)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Play Tone (5)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <SirenEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.2-121-5-toneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Indoor Siren 6 Play Tone (5)',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <SirenEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'siren.indoor_siren_6_play_tone_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'siren',
    'entity_category': None,
    'entity_id': 'siren.indoor_siren_6_play_tone_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Play Tone (6)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Play Tone (6)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <SirenEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.2-121-6-toneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Indoor Siren 6 Play Tone (6)',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <SirenEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'siren.indoor_siren_6_play_tone_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'siren',
    'entity_category': None,
    'entity_id': 'siren.indoor_siren_6_play_tone_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Play Tone (7)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Play Tone (7)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <SirenEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.2-121-7-toneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Indoor Siren 6 Play Tone (7)',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <SirenEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'siren.indoor_siren_6_play_tone_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'siren',
    'entity_category': None,
    'entity_id': 'siren.indoor_siren_6_play_tone_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Play Tone (8)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Play Tone (8)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <SirenEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '3245146787.2-121-8-toneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_play_tone_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <SirenEntityCapabilityAttribute.AVAILABLE_TONES: 'available_tones'>: dict({
        0: 'off',
        1: '01DING~1 (5 sec)',
        2: '02DING~1 (9 sec)',
        3: '03TRAD~1 (11 sec)',
        4: '04ELEC~1 (2 sec)',
        5: '05WEST~1 (13 sec)',
        6: '06CHIM~1 (7 sec)',
        7: '07CUCK~1 (31 sec)',
        8: '08TRAD~1 (6 sec)',
        9: '09SMOK~1 (11 sec)',
        10: '10SMOK~1 (6 sec)',
        11: '11FIRE~1 (35 sec)',
        12: '12COSE~1 (5 sec)',
        13: '13KLAX~1 (38 sec)',
        14: '14DEEP~1 (41 sec)',
        15: '15WARN~1 (37 sec)',
        16: '16TORN~1 (46 sec)',
        17: '17ALAR~1 (35 sec)',
        18: '18DEEP~1 (62 sec)',
        19: '19ALAR~1 (15 sec)',
        20: '20ALAR~1 (7 sec)',
        21: '21DIGI~1 (8 sec)',
        22: '22ALER~1 (64 sec)',
        23: '23SHIP~1 (4 sec)',
        24: '24CLOC~1 (10 sec)',
        25: '25CHRI~1 (4 sec)',
        26: '26GONG~1 (12 sec)',
        27: '27SING~1 (1 sec)',
        28: '28TONA~1 (5 sec)',
        29: '29UPWA~1 (2 sec)',
        30: '30DOOR~1 (27 sec)',
        255: 'default',
      }),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Indoor Siren 6 Play Tone (8)',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <SirenEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'siren.indoor_siren_6_play_tone_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_tone_id-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'siren',
    'entity_category': None,
    'entity_id': 'siren.indoor_siren_6_tone_id',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Tone ID',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tone ID',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <SirenEntityFeature: 11>,
    'translation_key': None,
    'unique_id': '3245146787.2-121-1-toneId',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][aeotec_zw164_siren_state.json][siren.indoor_siren_6_tone_id-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Indoor Siren 6 Tone ID',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <SirenEntityFeature: 11>,
    }),
    'context': <ANY>,
    'entity_id': 'siren.indoor_siren_6_tone_id',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
